--- a/src/main/resources/templates/vehicle-form.html
+++ b/src/main/resources/templates/vehicle-form.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Vehicle Editor</title>
+    <title th:text="${pageTitle}">Vehicle Editor</title>
 
     <!-- Favicons -->
     <link th:href="@{/assets/img/favicon.png}" href="../static/assets/img/favicon.png" rel="icon">
