--- a/src/main/resources/templates/visit-form.html
+++ b/src/main/resources/templates/visit-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Register new user</title>
+    <title th:text="${pageTitle}">Visit Editor</title>
 
     <!-- Favicons -->
     <link th:href="@{/assets/img/favicon.png}" href="../static/assets/img/favicon.png" rel="icon">
@@ -56,7 +56,7 @@
 </head>
 
 <body class="user-page"
-      style="background-image: url('https://res.cloudinary.com/tddvjavaforum/image/upload/v1649699739/SmartGarage/cars/car_rc3qgf.jpg')">
+      style="background-image: url('https://res.cloudinary.com/tddvjavaforum/image/upload/v1650227217/SmartGarage/cars/car_rc3qgf_c2t1zm.jpg')">
 
 <nav th:replace="index.html :: navbar"></nav>
 
@@ -84,8 +84,24 @@
                             <label class="error" th:errors="*{vehicleID}">Error placeholder</label>
                         </div>
 
-                        <div class="input-group form-group" style="width: 60%; margin-left: 20%">
-                            <select th:field="*{statusID}" class="form-select dropdown-toggle" type="number">
+                        <div th:if="${currentUser.getRole().getId() == 3}" class="input-group form-group"
+                             style="margin: 0; height: 0; width: 0">
+                            <select th:if="${currentUser.getRole().getId() == 3}" th:field="*{statusID}"
+                                    style="color: white; background-color: dimgray; visibility: hidden "
+                                    class="form-select dropdown-toggle" type="number">
+                                <option th:each="entry : ${status}"
+                                        th:value="${entry.getId()}"
+                                        th:text="${entry.getName()}"
+                                        th:selected="${entry.getName().equals('Requested')}">
+                                </option>
+                            </select>
+
+                        </div>
+
+                        <div th:if="${currentUser.getRole().getId() == 2}" class="input-group form-group"
+                             style="width: 60%; margin-left: 20%">
+                            <select th:if="${currentUser.getRole().getId() == 2}" th:field="*{statusID}"
+                                    class="form-select dropdown-toggle" type="number">
                                 <option selected value=0>(Select status)</option>
                                 <option th:each="entry : ${status}"
                                         th:value="${entry.getId()}"
@@ -93,6 +109,7 @@
                                 </option>
                             </select>
                         </div>
+
 
                         <div class="input-group form-group"
                              style="width: 60%; margin-left: 20%; margin-top: -8px">
@@ -123,8 +140,15 @@
                                     </div>
                                     <div style="margin-top: -20px">
                                         <div class="input-group date">
-                                            <input type="text" class="form-control" autocomplete="off"
+                                            <input th:if="${currentUser.getRole().getId() == 2}" type="text"
+                                                   class="form-control" autocomplete="off"
                                                    th:field="*{endDate}"/>
+
+                                            <input th:if="${currentUser.getRole().getId() == 3}" type="text"
+                                                   class="form-control" autocomplete="off"
+                                                   th:field="*{endDate}" disabled
+                                                   style="color: white; background-color: dimgray"/>
+
                                             <div class="input-group-append">
                                                         <span class="input-group-text"><i style="margin-right: -9px"
                                                                                           class="ri-calendar-2-line"></i></span>
@@ -179,60 +203,58 @@
                                 </button>
                             </div>
                         </div>
-
+                    </form>
                 </div>
-                </form>
             </div>
         </div>
     </div>
-</div>
 
-<footer th:replace="index.html :: footer"></footer>
-<div id="preloader"></div>
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+    <footer th:replace="index.html :: footer"></footer>
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
 
-<!-- Vendor JS Files -->
-<script th:src="@{/assets/vendor/purecounter/purecounter.js}"
-        src="../static/assets/vendor/purecounter/purecounter.js"></script>
-<script th:src="@{/assets/vendor/aos/aos.js}" src="../static/assets/vendor/aos/aos.js"></script>
-<script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"
-        src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script th:src="@{/assets/vendor/glightbox/js/glightbox.min.js}"
-        src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script th:src="@{/assets/vendor/isotope-layout/isotope.pkgd.min.js}"
-        src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script th:src="@{/assets/vendor/swiper/swiper-bundle.min.js}"
-        src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script th:src="@{/assets/vendor/php-email-form/validate.js}"
-        src="../static/assets/vendor/php-email-form/validate.js"></script>
+    <!-- Vendor JS Files -->
+    <script th:src="@{/assets/vendor/purecounter/purecounter.js}"
+            src="../static/assets/vendor/purecounter/purecounter.js"></script>
+    <script th:src="@{/assets/vendor/aos/aos.js}" src="../static/assets/vendor/aos/aos.js"></script>
+    <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"
+            src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{/assets/vendor/glightbox/js/glightbox.min.js}"
+            src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script th:src="@{/assets/vendor/isotope-layout/isotope.pkgd.min.js}"
+            src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script th:src="@{/assets/vendor/swiper/swiper-bundle.min.js}"
+            src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script th:src="@{/assets/vendor/php-email-form/validate.js}"
+            src="../static/assets/vendor/php-email-form/validate.js"></script>
 
-<!-- Template Main JS File -->
-<script th:src="@{/assets/js/main.js}" src="../static/assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script th:src="@{/assets/js/main.js}" src="../static/assets/js/main.js"></script>
 
-<!--Script for Date Picker-->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
-        integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-    $('.input-group.date').datepicker({
-        autoclose: true,
-        todayHighlight: true
-    });
-</script>
+    <!--Script for Date Picker-->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
+            integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $('.input-group.date').datepicker({
+            autoclose: true,
+            todayHighlight: true
+        });
+    </script>
 
-<!--Script for multiple select-->
-<script>
-    $(".chosen-select").chosen({
-        no_results_text: "Oops, nothing found!"
-    })
-</script>
+    <!--Script for multiple select-->
+    <script>
+        $(".chosen-select").chosen({
+            no_results_text: "Oops, nothing found!"
+        })
+    </script>
 
 </body>
 </html>
