Small updates for recording Stripe payments.

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -34,7 +34,7 @@
 </head>
 
 <body class="user-page"
-      style="background-image: url('https://res.cloudinary.com/tddvjavaforum/image/upload/v1650649339/SmartGarage/background_oilnqu.jpg')">
+      style="background-image: url('https://res.cloudinary.com/tddvjavaforum/image/upload/v1650702968/SmartGarage/background2_a48w9f.jpg')">
 
 <nav th:replace="index.html :: navbar"></nav>
 
@@ -57,7 +57,7 @@
             <h1 style="color: #ffc451; margin-left: 100px" class="ri-linkedin-box-fill"></h1></a>
         <a target="_blank" href="https://github.com/denislav-vuchkov" class="facebook">
             <h1 style="color: #ffc451; margin-top: -56px; margin-left: 150px" class="ri-github-fill"></h1></a>
-        <a target="_blank" href="" class="facebook">
+        <a target="_blank" href="https://drive.google.com/file/d/1LlBfY0kMR6h-2XCl943o7gag0r-_Kayp/view?usp=sharing" class="facebook">
             <h2 style="color: #ffc451; margin-top: -51px; margin-left: 200px" class="bi bi-file-earmark-person"></h2>
         </a>
     </div>
@@ -71,7 +71,7 @@
             <h1 style="color: #ffc451; margin-left: 100px" class="ri-linkedin-box-fill"></h1></a>
         <a target="_blank" href="https://gitlab.com/tddv" class="facebook">
             <h1 style="color: #ffc451; margin-top: -56px; margin-left: 150px" class="ri-gitlab-fill"></h1></a>
-        <a target="_blank" href="" class="facebook">
+        <a target="_blank" href="https://drive.google.com/file/d/11DCkVMlBfh8nqfZdYgUrkWJ42q1w1u51/view?usp=sharing" class="facebook">
             <h2 style="color: #ffc451; margin-top: -51px; margin-left: 200px" class="bi bi-file-earmark-person"></h2>
         </a>
     </div>
